feat: 修改heade info

--- a/locales/components/headInfo.lang.json
+++ b/locales/components/headInfo.lang.json
@@ -1,14 +1,14 @@
 {
     "en_US": {
-        "可视化在线API_1956": "可视化在线API接口文档，高效的团队协作工具，文档轻松编辑与分享，数据云存储并提供权限管理，让前后端约定接口的工作变得十分简单。",
-        "在线API文档-_4754": "在线API文档 - SamYoc"
+        "React+Ne_40c3": "React+Nextjs+i18n framework",
+        "React框架，_c754": "React framework，React+less+i18n+redux+nextjs+express",
     },
     "zh_Hans_CN": {
-        "可视化在线API_1956": "可视化在线API接口文档，高效的团队协作工具，文档轻松编辑与分享，数据云存储并提供权限管理，让前后端约定接口的工作变得十分简单。",
-        "在线API文档-_4754": "在线API文档 - SamYoc"
+        "React+Ne_40c3": "React+Nextjs+i18n 框架",
+        "React框架，_c754": "React框架，React+less+i18n+redux+nextjs+express"
     },
     "zh_Hant_HK": {
-        "可视化在线API_1956": "可視化在線API接口文檔，高效的團隊協作工具，文檔輕松編輯與分享，數據雲存儲並提供權限管理，讓前後端約定接口的工作變得十分簡單。",
-        "在线API文档-_4754": "在線API文檔 - SamYoc"
+        "React+Ne_40c3": "React+Nextjs+i18n 框架",
+        "React框架，_c754": "React框架，React+less+i18n+redux+nextjs+express"
     }
 }
