--- a/locales/components/headInfo.lang.json
+++ b/locales/components/headInfo.lang.json
@@ -1,7 +1,7 @@
 {
     "en_US": {
         "React+Ne_40c3": "React+Nextjs+i18n framework",
-        "React框架，_c754": "React framework，React+less+i18n+redux+nextjs+express",
+        "React框架，_c754": "React framework，React+less+i18n+redux+nextjs+express"
     },
     "zh_Hans_CN": {
         "React+Ne_40c3": "React+Nextjs+i18n 框架",
